CSS/index.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

.clickable {
    cursor: pointer;
}

.container {
    width: 100%;
    height: 100vh;
    display: grid;
    grid-template-columns: 0.6fr 6fr 2fr;
    overflow-x: hidden;
}

.nav-menu {
    background-color: #1b263b;
    display: flex;
    flex-flow: column nowrap;
    align-items: center;
    justify-content: space-between;
    padding-block: 0.5em;
    border-right: 1px solid #415a77;
    z-index: 1;
    transition: 0.3s;
}

.nav-menu.remove-right-border {
    border-right: 0;
}

.group-1 {
    display: flex;
    flex-flow: column nowrap;
    align-items: center;
}

.nav-popup {
    position: absolute;
    top: 0;
    left: 100px;
    width: 300px;
    height: 100vh;
    background-color: red;
    background-color: #1b263b;
    border-right: 1px solid #415a77;

    transform: translateX(-100%);
    transition: 0.3s;
    z-index: -1;

    font-family: "Roboto", sans-serif;
    color: white;

    display: flex;
    flex-flow: column nowrap;
    font-size: 2.5rem;
    padding: 1em;
    visibility: hidden;
}

.nav-popup>a {
    all: unset;
    cursor: pointer;
}

.nav-popup.open {
    transform: translateX(0);
    visibility: visible;

}

.main-content {
    background-color: #1b263b;
    border-right: 1px solid #415a77;
}

.recent-story {
    background-color: #1b263b;


}

